debugging working tests

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = git@github.com:evmts/helios.git
 [submodule "bench/evm"]
 	path = bench/evm
-	url = https://github.com/ziyadedher/evm-bench.git
+	url = https://github.com/evmts/evm-bench.git
