--- a/packages/actions/tsconfig.json
+++ b/packages/actions/tsconfig.json
@@ -4,7 +4,7 @@
 		"rootDir": "src",
 		"outDir": "types",
 		"skipLibCheck": true,
-		"types": ["bun-types"]
+		"types": ["bun-types", "@tevm/test-matchers"]
 	},
 	"include": ["src", "src/**/*.json"],
 	"exclude": ["src/**/*.spec.ts", "**/*.spec.ts", "node_modules"]
