--- a/packages/actions/package.json
+++ b/packages/actions/package.json
@@ -83,6 +83,7 @@
     "zod": "^3.25.30"
   },
   "devDependencies": {
+    "@tevm/decorators": "workspace:^",
     "@tevm/test-utils": "workspace:^",
     "@tevm/tsconfig": "workspace:^",
     "@tevm/tsupconfig": "workspace:^",
