chore: install test-matchers in consumer packages

--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -70,6 +70,7 @@
 	},
 	"devDependencies": {
 		"@evmts/core": "1.0.0-next.12",
+		"@tevm/test-matchers": "workspace:^",
 		"@evmts/ts-plugin": "1.0.0-next.18",
 		"@evmts/vite-plugin": "1.0.0-next.19",
 		"@tevm/tsconfig": "workspace:^",
