--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -81,6 +81,7 @@
 		"@tevm/vm": "workspace:^"
 	},
 	"devDependencies": {
+		"@tevm/test-matchers": "workspace:^",
 		"@tevm/test-utils": "workspace:^",
 		"@tevm/tsconfig": "workspace:^",
 		"@tevm/tsupconfig": "workspace:^"
