--- a/packages/contract/tsconfig.json
+++ b/packages/contract/tsconfig.json
@@ -10,7 +10,8 @@
 		"skipLibCheck": true,
 		// this should be "Bundler" but don't want to fight a broken type
 		"moduleResolution": "NodeNext",
-		"module": "NodeNext"
+		"module": "NodeNext",
+		"types": ["@tevm/test-matchers"]
 	},
 	"include": ["src", "src/**/*.json", "**/*.sol"],
 	"exclude": ["src/common/**/*"]
