--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -73,6 +73,7 @@
 		"@tevm/utils": "workspace:^"
 	},
 	"devDependencies": {
+		"@tevm/test-matchers": "workspace:^",
 		"@tevm/tsconfig": "workspace:^",
 		"@tevm/tsupconfig": "workspace:^"
 	},
