--- a/packages/evm/tsconfig.json
+++ b/packages/evm/tsconfig.json
@@ -2,7 +2,7 @@
 	"extends": "@tevm/tsconfig/base.json",
 	"compilerOptions": {
 		"skipLibCheck": true,
-		"types": ["bun-types"]
+		"types": ["bun-types", "@tevm/test-matchers"]
 	},
 	"include": ["src/*.js", "src/*.ts"]
 }
