--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -75,6 +75,7 @@
 	},
 	"devDependencies": {
 		"@tevm/actions": "workspace:^",
+		"@tevm/test-matchers": "workspace:^",
 		"@tevm/test-utils": "workspace:^",
 		"@tevm/tsconfig": "workspace:^",
 		"@tevm/tsupconfig": "workspace:^",
