--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -74,6 +74,7 @@
 		"ethereum-cryptography": "^3.2.0"
 	},
 	"devDependencies": {
+		"@tevm/test-matchers": "workspace:^",
 		"@tevm/tsconfig": "workspace:^",
 		"@tevm/tsupconfig": "workspace:^"
 	},
