--- a/packages/node/tsconfig.json
+++ b/packages/node/tsconfig.json
@@ -4,7 +4,7 @@
 		"rootDir": "src",
 		"outDir": "types",
 		"skipLibCheck": true,
-		"types": ["bun-types", "@tevm/test-matchers"]
+		"types": ["bun-types"]
 	},
 	"include": ["src"]
 }
