--- a/packages/precompiles/package.json
+++ b/packages/precompiles/package.json
@@ -61,10 +61,12 @@
     "test:run": "vitest"
   },
   "dependencies": {
+    "@ethereumjs/util": "^10.0.0",
     "@noble/curves": "^1.6.0",
     "@tevm/contract": "workspace:^",
     "@tevm/evm": "workspace:^",
-    "@tevm/utils": "workspace:^"
+    "@tevm/utils": "workspace:^",
+    "viem": "^2.30.1"
   },
   "devDependencies": {
     "@tevm/bun-plugin": "workspace:^",
