--- a/packages/precompiles/package.json
+++ b/packages/precompiles/package.json
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "@noble/curves": "^1.6.0",
+    "@tevm/address": "workspace:^",
     "@tevm/contract": "workspace:^",
     "@tevm/evm": "workspace:^",
     "@tevm/utils": "workspace:^"
