--- a/packages/memory-client/package.json
+++ b/packages/memory-client/package.json
@@ -77,6 +77,7 @@
 		"vitest": "^3.2.4"
 	},
 	"devDependencies": {
+		"@tevm/test-node": "workspace:^",
 		"@tevm/test-utils": "workspace:^",
 		"@tevm/tsconfig": "workspace:^",
 		"@tevm/tsupconfig": "workspace:^",
