test: add snapshot tests to actions package

--- a/packages/actions/package.json
+++ b/packages/actions/package.json
@@ -83,6 +83,7 @@
 	},
 	"devDependencies": {
 		"@tevm/decorators": "workspace:^",
+		"@tevm/test-node": "workspace:^",
 		"@tevm/test-utils": "workspace:^",
 		"@tevm/tsconfig": "workspace:^",
 		"@tevm/tsupconfig": "workspace:^",
