--- a/packages/actions/tsconfig.json
+++ b/packages/actions/tsconfig.json
@@ -1,11 +1,11 @@
 {
 	"extends": "@tevm/tsconfig/base.json",
 	"compilerOptions": {
-		"rootDir": "src",
+		"rootDir": ".",
 		"outDir": "types",
 		"skipLibCheck": true,
 		"types": ["bun-types"]
 	},
-	"include": ["src", "src/**/*.json"],
+	"include": ["src", "src/**/*.json", "vitest.setup.ts"],
 	"exclude": ["src/**/*.spec.ts", "**/*.spec.ts", "node_modules"]
 }
