--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "all": "pnpm -r build:dist && pnpm -r build:types && pnpm -r test:coverage && pnpm -r dev:run && pnpm -r test:rust && pnpm -r typecheck && pnpm -r lint:check && pnpm -r lint:deps && pnpm -r lint:package && pnpm -r build:app && pnpm -r generate:docs && pnpm -r build:rust && pnpm -r build:wasm",
     "all:clean": "bun clean && pnpm i && bun allz",
     "allz": "pnpm i && bun lint && bun sort-package-json && bun all",
-    "build": "pnpm -r build:dist && pnpm -r build:app && pnpm -r build:types",
+    "build": "pnpm -r build:dist && pnpm -r build:types && pnpm -r build:app",
     "build:app": "pnpm -r build:app",
     "build:dist": "pnpm -r build:dist",
     "build:rust:app": "pnpm -r build --filter=my_rust_node_lib",
@@ -46,26 +46,26 @@
   },
   "dependencies": {
     "@sveltejs/adapter-static": "^3.0.9",
-    "@sveltejs/kit": "^2.37.1",
-    "@sveltejs/vite-plugin-svelte": "^6.1.4",
-    "@tanstack/svelte-query": "^5.87.1",
-    "svelte": "^5.38.7",
-    "svelte-check": "^4.3.1"
+    "@sveltejs/kit": "^2.43.5",
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@tanstack/svelte-query": "^5.90.2",
+    "svelte": "^5.39.6",
+    "svelte-check": "^4.3.2"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.18.2",
-    "@biomejs/biome": "^2.2.3",
+    "@biomejs/biome": "^2.2.4",
     "@changesets/changelog-github": "^0.5.1",
-    "@changesets/cli": "^2.29.6",
+    "@changesets/cli": "^2.29.7",
     "@effect/codemod": "^0.0.16",
     "@google/generative-ai": "^0.24.1",
     "@monodon/rust": "^2.3.0",
-    "@napi-rs/cli": "3.1.5",
-    "@napi-rs/wasm-runtime": "^1.0.3",
+    "@napi-rs/cli": "3.2.0",
+    "@napi-rs/wasm-runtime": "^1.0.5",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
-    "abitype": "^1.1.0",
-    "bun-types": "^1.2.21",
+    "abitype": "^1.1.1",
+    "bun-types": "^1.2.22",
     "concurrently": "^9.2.1",
     "depcheck": "^1.4.7",
     "dotenv": "^17.2.2",
@@ -74,15 +74,15 @@
     "glob": "^11.0.3",
     "jscodeshift": "^17.3.0",
     "mkdirp": "^3.0.1",
-    "nx": "21.5.1",
-    "publint": "^0.3.12",
+    "nx": "21.5.3",
+    "publint": "^0.3.13",
     "sort-package-json": "^3.4.0",
     "starlight-typedoc": "^0.21.3",
     "tsup": "^8.5.0",
-    "typedoc": "^0.28.12",
-    "typedoc-plugin-markdown": "4.8.1",
+    "typedoc": "^0.28.13",
+    "typedoc-plugin-markdown": "4.9.0",
     "typescript": "^5.9.2",
-    "vite": "^7.1.5",
+    "vite": "^7.1.7",
     "vitest": "^3.2.4",
     "vocs": "1.0.13"
   },
