--- a/biome.json
+++ b/biome.json
@@ -1,50 +1,5 @@
 {
 	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
-	"organizeImports": {
-		"enabled": true
-	},
-	"files": {
-		"ignore": [
-			".nx",
-			"g/**/*",
-			"node_modules",
-			"package.json",
-			".vercel",
-			".tevm",
-			"src/evm/prompts/**/*",
-			"**/.tevm",
-			"**/.vercel",
-			"**/package.json",
-			"**/coverage",
-			"**/node_modules",
-			"**/dist",
-			"**/types",
-			"**/artifacts",
-			"**/lib",
-			"**/fixtures",
-			"**/.next",
-			"**/.vitepress/cache",
-			"**/.vitepress/dist",
-			"scaffold-tevm",
-			"docs/**/*",
-			"tevm/**/*",
-			"bundler/**/*",
-			".vscode",
-			".changeset",
-			".devcontainer",
-			"examples/svelte-ethers/.svelte-kit",
-			"app/.svelte-kit",
-			"**/.svelte-kit",
-			"examples/next",
-			"cli",
-			"bundler-packages/config/src/fixtures",
-			"bundler-packages/cli/fixtures",
-			"**/pkg/**/*.js",
-			"**/pkg/**/*.wasm",
-			"evmone/**",
-			"revm/**"
-		]
-	},
 	"formatter": {
 		"enabled": true,
 		"formatWithErrors": false,
@@ -96,6 +51,13 @@
 			"quoteStyle": "single",
 			"trailingCommas": "all",
 			"semicolons": "asNeeded"
+		}
+	},
+	"assist": {
+		"actions": {
+			"source": {
+				"organizeImports": "on"
+			}
 		}
 	}
 }
