--- a/packages/actions/package.json
+++ b/packages/actions/package.json
@@ -50,7 +50,7 @@
     "build": "nx run-many --targets=build:dist,build:types --projects=@tevm/actions",
     "build:dist": "tsup",
     "build:types": "tsup --dts-only && tsc --emitDeclarationOnly --declaration",
-    "clean": "rm -rf node_modules && rm -rf artifacts && rm -rf dist && rm -rf cache",
+    "clean": "rm -rf node_modules && rm -rf artifacts && rm -rf dist && rm -rf cache && rm -rf types",
     "format": "biome format . --write",
     "format:check": "biome format .",
     "generate:docs": "bun run typedoc",
