--- a/packages/actions/tsconfig.json
+++ b/packages/actions/tsconfig.json
@@ -6,5 +6,6 @@
 		"skipLibCheck": true,
 		"types": ["bun-types"]
 	},
-	"include": ["src", "src/**/*.json"]
+	"include": ["src", "src/**/*.json"],
+	"exclude": ["src/**/*.spec.ts", "**/*.spec.ts", "node_modules"]
 }
