--- a/package.json
+++ b/package.json
@@ -1,93 +1,98 @@
 {
-  "name": "@tevm/root",
-  "version": "0.0.0",
-  "private": true,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/evmts/tevm-monorepo.git"
-  },
-  "license": "MIT",
-  "contributors": [
-    "Will Cory <willcory10@gmail.com>"
-  ],
-  "type": "commonjs",
-  "scripts": {
-    "all": "pnpm -r build:dist && pnpm -r build:types && pnpm -r test:coverage && pnpm -r dev:run && pnpm -r test:rust && pnpm -r typecheck && pnpm -r lint:check && pnpm -r lint:deps && pnpm -r lint:package && pnpm -r build:app && pnpm -r generate:docs && pnpm -r build:rust && pnpm -r build:wasm",
-    "all:clean": "bun clean && pnpm i && bun allz",
-    "allz": "pnpm i && bun lint && bun sort-package-json && bun all",
-    "build": "pnpm -r build:dist && pnpm -r build:types && pnpm -r build:app",
-    "build:app": "pnpm -r build:app",
-    "build:dist": "pnpm -r build:dist",
-    "build:rust:app": "pnpm -r build --filter=my_rust_node_lib",
-    "build:rust:lib": "pnpm -r build --filter=my_rust_node_lib",
-    "build:types": "pnpm -r build:types && pnpm -r typecheck",
-    "clean": "pnpm -r clean && rm -rf node_modules && rm -rf .nx",
-    "e2e": "pnpm -r e2e --filter=e2e",
-    "find-missing-jsdoc": "node scripts/jsdoc-helper/find-missing-jsdoc.js",
-    "format:check": "biome format .",
-    "generate:docs": "pnpm -r generate:docs",
-    "jsdoc:add": "node scripts/jsdoc-helper/add-jsdoc.js",
-    "jsdoc:batch": "node scripts/jsdoc-helper/batch-add-jsdoc.js",
-    "lint": "biome check . --write --unsafe && biome format . --write",
-    "lint:check": "biome check .",
-    "lint:deps": "bunx depcheck && pnpm -r lint:deps",
-    "lint:package": "pnpm -r lint:package",
-    "release:check": "changeset status --verbose --since=origin/main",
-    "release:publish": "pnpm install && pnpm -r build:dist && pnpm -r build:types && pnpm -r build:app && cd bundler-packages/resolutions-rs && bun run build:release && cd ../../ && changeset publish",
-    "release:publish:jsr": "cd tevm && pnpm publish:jsr",
-    "release:publish:jsr:dry-run": "cd tevm && pnpm publish:jsr:dry",
-    "release:version": "changeset version && pnpm install --lockfile-only",
-    "sort-package-json": "sort-package-json package.json apps/*/package.json bundler-packages/*/package.json configs/*/package.json examples/*/package.json experimental/*/package.json extensions/*/package.json packages/*/package.json tevm/package.json",
-    "sort-package-json:check": "sort-package-json package.json docs/package.json configs/*/package.json examples/*/package.json experimental/*/package.json extensions/*/package.json packages/*/package.json && git diff --exit-code tevm/package.json",
-    "test": "bun test:run",
-    "test:coverage": "pnpm -r test:coverage",
-    "test:run": "pnpm -r test:run",
-    "up": "bun x npm-check-updates -ui -ws"
-  },
-  "dependencies": {
-    "@sveltejs/adapter-static": "^3.0.9",
-    "@sveltejs/kit": "^2.43.5",
-    "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "@tanstack/svelte-query": "^5.90.2",
-    "svelte": "^5.39.6",
-    "svelte-check": "^4.3.2"
-  },
-  "devDependencies": {
-    "@arethetypeswrong/cli": "^0.18.2",
-    "@biomejs/biome": "^2.2.4",
-    "@changesets/changelog-github": "^0.5.1",
-    "@changesets/cli": "^2.29.7",
-    "@effect/codemod": "^0.0.16",
-    "@google/generative-ai": "^0.24.1",
-    "@monodon/rust": "^2.3.0",
-    "@napi-rs/cli": "3.2.0",
-    "@napi-rs/wasm-runtime": "^1.0.5",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
-    "abitype": "^1.1.1",
-    "bun-types": "^1.2.22",
-    "concurrently": "^9.2.1",
-    "depcheck": "^1.4.7",
-    "dotenv": "^17.2.2",
-    "emnapi": "^1.5.0",
-    "gitmoji-cli": "^9.7.0",
-    "glob": "^11.0.3",
-    "jscodeshift": "^17.3.0",
-    "mkdirp": "^3.0.1",
-    "nx": "21.5.3",
-    "publint": "^0.3.13",
-    "sort-package-json": "^3.4.0",
-    "starlight-typedoc": "^0.21.3",
-    "tsup": "^8.5.0",
-    "typedoc": "^0.28.13",
-    "typedoc-plugin-markdown": "4.9.0",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.7",
-    "vitest": "^3.2.4",
-    "vocs": "1.0.13"
-  },
-  "packageManager": "pnpm@10.6.1+sha512.40ee09af407fa9fbb5fbfb8e1cb40fbb74c0af0c3e10e9224d7b53c7658528615b2c92450e74cfad91e3a2dcafe3ce4050d80bda71d757756d2ce2b66213e9a3",
-  "engines": {
-    "node": ">=18"
-  }
+	"name": "@tevm/root",
+	"version": "0.0.0",
+	"private": true,
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/evmts/tevm-monorepo.git"
+	},
+	"license": "MIT",
+	"contributors": [
+		"Will Cory <willcory10@gmail.com>"
+	],
+	"type": "commonjs",
+	"scripts": {
+		"all": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,build:rust,build:wasm",
+		"all:clean": "bun clean && pnpm i && bun allz",
+		"all:slow": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app --parallel=1",
+		"all:zig": "zig build && zig build test-server",
+		"allz": "bun all:zig && npx concurrently 'pnpm i' 'bun lint' 'bun sort-package-json' && nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,lint:package,lint:deps,lint,format,build:rust:lib,build:zig,build:wasm",
+		"build": "nx run-many --targets=build:dist,build:app,build:types,build:zig,build:wasm",
+		"build:app": "nx run-many --target=build:app",
+		"build:dist": "nx run-many --target=build:dist",
+		"build:rust:app": "nx run-many --target=build --projects=my_rust_node_lib --configuration=production",
+		"build:rust:lib": "nx run-many --target=build --projects=my_rust_node_lib",
+		"build:types": "nx run-many --targets=build:types,typecheck",
+		"build:wasm": "cd src && zig build wasm && mkdir -p ../dist && find ../.zig-cache -name \"*.wasm\" -exec cp {} ../dist/zigevm.wasm \\; && echo \"WASM build completed\" && echo \"WASM size: $(ls -lh ../dist/zigevm.wasm | awk '{print $5}')\" && echo \"WASM path: $(realpath ../dist/zigevm.wasm)\"",
+		"build:zig": "cd src && zig build",
+		"clean": "nx reset && nx run-many --target=clean && rm -rf node_modules && rm -rf .nx",
+		"e2e": "nx e2e e2e",
+		"find-missing-jsdoc": "node scripts/jsdoc-helper/find-missing-jsdoc.js",
+		"format:check": "biome format .",
+		"generate:docs": "nx run-many --target=generate:docs",
+		"jsdoc:add": "node scripts/jsdoc-helper/add-jsdoc.js",
+		"jsdoc:batch": "node scripts/jsdoc-helper/batch-add-jsdoc.js",
+		"lint": "biome check . --write --unsafe && biome format . --write",
+		"lint:check": "nx run-many --target=lint:check",
+		"lint:deps": "bunx depcheck && nx run-many --target=lint:deps",
+		"lint:package": "nx run-many --target=lint:package",
+		"release:check": "changeset status --verbose --since=origin/main",
+		"release:publish": "pnpm install && nx run-many --target=build:app,build:dist,build:types --skip-nx-cache && cd bundler-packages/resolutions-rs && bun run build:release && cd ../../ && changeset publish",
+		"release:publish:jsr": "cd tevm && pnpm publish:jsr",
+		"release:publish:jsr:dry-run": "cd tevm && pnpm publish:jsr:dry",
+		"release:version": "changeset version && pnpm install --lockfile-only",
+		"sort-package-json": "sort-package-json package.json apps/*/package.json bundler-packages/*/package.json configs/*/package.json examples/*/package.json experimental/*/package.json extensions/*/package.json packages/*/package.json tevm/package.json",
+		"sort-package-json:check": "sort-package-json package.json docs/package.json configs/*/package.json examples/*/package.json experimental/*/package.json extensions/*/package.json packages/*/package.json && git diff --exit-code tevm/package.json",
+		"test": "bun test:run",
+		"test:coverage": "nx run-many --target=test:coverage --skip-nx-cache && bun test:zig",
+		"test:run": "nx run-many --target=test:run",
+		"test:zig": "cd src && zig build test",
+		"up": "bun x npm-check-updates -ui -ws"
+	},
+	"dependencies": {
+		"@sveltejs/adapter-static": "^3.0.9",
+		"@sveltejs/kit": "^2.43.5",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@tanstack/svelte-query": "^5.90.2",
+		"svelte": "^5.39.6",
+		"svelte-check": "^4.3.2"
+	},
+	"devDependencies": {
+		"@arethetypeswrong/cli": "^0.18.2",
+		"@biomejs/biome": "^2.2.4",
+		"@changesets/changelog-github": "^0.5.1",
+		"@changesets/cli": "^2.29.7",
+		"@effect/codemod": "^0.0.16",
+		"@google/generative-ai": "^0.24.1",
+		"@monodon/rust": "^2.3.0",
+		"@napi-rs/cli": "3.2.0",
+		"@napi-rs/wasm-runtime": "^1.0.5",
+		"@vitest/coverage-v8": "^3.2.4",
+		"@vitest/ui": "^3.2.4",
+		"abitype": "^1.1.1",
+		"bun-types": "^1.2.22",
+		"concurrently": "^9.2.1",
+		"depcheck": "^1.4.7",
+		"dotenv": "^17.2.2",
+		"emnapi": "^1.5.0",
+		"gitmoji-cli": "^9.7.0",
+		"glob": "^11.0.3",
+		"jscodeshift": "^17.3.0",
+		"mkdirp": "^3.0.1",
+		"nx": "21.5.3",
+		"publint": "^0.3.13",
+		"sort-package-json": "^3.4.0",
+		"starlight-typedoc": "^0.21.3",
+		"tsup": "^8.5.0",
+		"typedoc": "^0.28.13",
+		"typedoc-plugin-markdown": "4.9.0",
+		"typescript": "^5.9.2",
+		"vite": "^7.1.7",
+		"vitest": "^3.2.4",
+		"vocs": "1.0.13"
+	},
+	"packageManager": "pnpm@10.6.1+sha512.40ee09af407fa9fbb5fbfb8e1cb40fbb74c0af0c3e10e9224d7b53c7658528615b2c92450e74cfad91e3a2dcafe3ce4050d80bda71d757756d2ce2b66213e9a3",
+	"engines": {
+		"node": ">=18"
+	}
 }
