--- a/packages/precompiles/package.json
+++ b/packages/precompiles/package.json
@@ -58,7 +58,7 @@
     "package:up": "pnpm up --latest",
     "test": "vitest --watch",
     "test:coverage": "vitest --coverage --run",
-    "test:run": "vitest"
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@noble/curves": "^2.0.1",
