--- a/package.json
+++ b/package.json
@@ -12,19 +12,16 @@
 	],
 	"type": "commonjs",
 	"scripts": {
-		"all": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,build:rust,build:wasm",
+		"all": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,build:rust",
 		"all:clean": "bun clean && pnpm i && bun allz",
 		"all:slow": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app --parallel=1",
-		"all:zig": "zig build && zig build test-server",
-		"allz": "bun all:zig && npx concurrently 'pnpm i' 'bun lint' 'bun sort-package-json' && nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,lint:package,lint:deps,lint,format,build:rust:lib,build:zig,build:wasm",
-		"build": "nx run-many --targets=build:dist,build:app,build:types,build:zig,build:wasm",
+		"allz": "npx concurrently 'pnpm i' 'bun lint' 'bun sort-package-json' && nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,lint:package,lint:deps,lint,format,build:rust:lib",
+		"build": "nx run-many --targets=build:dist,build:app,build:types",
 		"build:app": "nx run-many --target=build:app",
 		"build:dist": "nx run-many --target=build:dist",
 		"build:rust:app": "nx run-many --target=build --projects=my_rust_node_lib --configuration=production",
 		"build:rust:lib": "nx run-many --target=build --projects=my_rust_node_lib",
 		"build:types": "nx run-many --targets=build:types,typecheck",
-		"build:wasm": "cd src && zig build wasm && mkdir -p ../dist && find ../.zig-cache -name \"*.wasm\" -exec cp {} ../dist/zigevm.wasm \\; && echo \"WASM build completed\" && echo \"WASM size: $(ls -lh ../dist/zigevm.wasm | awk '{print $5}')\" && echo \"WASM path: $(realpath ../dist/zigevm.wasm)\"",
-		"build:zig": "cd src && zig build",
 		"clean": "nx reset && nx run-many --target=clean && rm -rf node_modules && rm -rf .nx",
 		"e2e": "nx e2e e2e",
 		"find-missing-jsdoc": "node scripts/jsdoc-helper/find-missing-jsdoc.js",
@@ -44,9 +41,8 @@
 		"sort-package-json": "sort-package-json package.json apps/*/package.json bundler-packages/*/package.json configs/*/package.json examples/*/package.json experimental/*/package.json extensions/*/package.json packages/*/package.json tevm/package.json",
 		"sort-package-json:check": "sort-package-json package.json docs/package.json configs/*/package.json examples/*/package.json experimental/*/package.json extensions/*/package.json packages/*/package.json && git diff --exit-code tevm/package.json",
 		"test": "bun test:run",
-		"test:coverage": "nx run-many --target=test:coverage --skip-nx-cache && bun test:zig",
+		"test:coverage": "nx run-many --target=test:coverage --skip-nx-cache",
 		"test:run": "nx run-many --target=test:run",
-		"test:zig": "cd src && zig build test",
 		"up": "bun x npm-check-updates -ui -ws"
 	},
 	"dependencies": {
