chore: fix lint:check by ignoring unknown files & generated types directories, fix tevm-run tsconfig & test runner for ci

--- a/biome.json
+++ b/biome.json
@@ -4,7 +4,7 @@
 		"enabled": false
 	},
 	"files": {
-		"ignoreUnknown": false,
+		"ignoreUnknown": true,
 		"includes": [
 			"**",
 			"!**/node_modules",
@@ -13,6 +13,8 @@
 			"!**/.cursor",
 			"!**/dist",
 			"!**/build",
+			"!**/types",
+			"!**/docs",
 			"!**/coverage",
 			"!**/.nx",
 			"!**/.tevm",
