--- a/bundler-packages/runtime-rs/package.json
+++ b/bundler-packages/runtime-rs/package.json
@@ -5,7 +5,7 @@
 	"description": "Rust implementation of Tevm runtime",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/evmts/tevm-monorepo.git",
+		"url": "git+https://github.com/evmts/tevm-monorepo.git",
 		"directory": "bundler-packages/runtime-rs"
 	},
 	"license": "MIT",
