--- a/bundler-packages/runtime/package.json
+++ b/bundler-packages/runtime/package.json
@@ -14,8 +14,8 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/evmts/tevm-monorepo.git",
-		"directory": "bundler/runtime"
+		"url": "git+https://github.com/evmts/tevm-monorepo.git",
+		"directory": "bundler-packages/runtime"
 	},
 	"license": "MIT",
 	"contributors": [
