--- a/bundler-packages/vite/package.json
+++ b/bundler-packages/vite/package.json
@@ -12,8 +12,8 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/evmts/tevm-monorepo.git",
-		"directory": "bundler/vite"
+		"url": "git+https://github.com/evmts/tevm-monorepo.git",
+		"directory": "bundler-packages/vite"
 	},
 	"license": "MIT",
 	"contributors": [
