--- a/extensions/ethers/package.json
+++ b/extensions/ethers/package.json
@@ -15,7 +15,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/evmts/tevm-monorepo.git",
+		"url": "git+https://github.com/evmts/tevm-monorepo.git",
 		"directory": "extensions/ethers"
 	},
 	"license": "MIT",
