--- a/extensions/viem/package.json
+++ b/extensions/viem/package.json
@@ -14,7 +14,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/evmts/tevm-monorepo.git",
+		"url": "git+https://github.com/evmts/tevm-monorepo.git",
 		"directory": "extensions/viem"
 	},
 	"license": "MIT",
