--- a/lsp/lsp/package.json
+++ b/lsp/lsp/package.json
@@ -16,7 +16,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/evmts/tevm-monorepo.git",
+		"url": "git+https://github.com/evmts/tevm-monorepo.git",
 		"directory": "lsp/lsp"
 	},
 	"files": [
