--- a/lsp/ts-plugin/package.json
+++ b/lsp/ts-plugin/package.json
@@ -13,7 +13,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/evmts/tevm-monorepo.git",
+		"url": "git+https://github.com/evmts/tevm-monorepo.git",
 		"directory": "lsp/ts-plugin"
 	},
 	"license": "MIT",
