--- a/lsp/vscode/package.json
+++ b/lsp/vscode/package.json
@@ -4,7 +4,7 @@
 	"version": "1.0.0-next.146",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/evmts/tevm-monorepo.git",
+		"url": "git+https://github.com/evmts/tevm-monorepo.git",
 		"directory": "lsp/vscode"
 	},
 	"categories": [
