--- a/packages/block/package.json
+++ b/packages/block/package.json
@@ -12,7 +12,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/evmts/tevm-monorepo.git",
+		"url": "git+https://github.com/evmts/tevm-monorepo.git",
 		"directory": "packages/block"
 	},
 	"license": "MIT",
