--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -14,7 +14,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/evmts/tevm-monorepo.git",
+		"url": "git+https://github.com/evmts/tevm-monorepo.git",
 		"directory": "packages/contracts"
 	},
 	"license": "MIT",
