--- a/packages/effect/package.json
+++ b/packages/effect/package.json
@@ -9,7 +9,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/evmts/tevm-monorepo.git",
+		"url": "git+https://github.com/evmts/tevm-monorepo.git",
 		"directory": "packages/effect"
 	},
 	"license": "MIT",
