--- a/biome.json
+++ b/biome.json
@@ -1,49 +1,80 @@
 {
 	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
-	"organizeImports": {
-		"enabled": true
+	"vcs": {
+		"enabled": false
 	},
 	"files": {
-		"ignore": [
-			".nx",
-			"nx.json",
-			"g/**/*",
-			"node_modules",
-			"package.json",
-			".vercel",
-			".tevm",
-			"src/evm/prompts/**/*",
-			"**/.tevm",
-			"**/.vercel",
-			"**/package.json",
-			"**/coverage",
-			"**/node_modules",
-			"**/dist",
-			"**/types",
-			"**/artifacts",
-			"**/lib",
-			"**/fixtures",
-			"**/.next",
-			"**/.vitepress/cache",
-			"**/.vitepress/dist",
-			"scaffold-tevm",
-			"docs/**/*",
-			"tevm/**/*",
-			"bundler/**/*",
-			".vscode",
-			".changeset",
-			".devcontainer",
-			"examples/svelte-ethers/.svelte-kit",
-			"app/.svelte-kit",
-			"**/.svelte-kit",
-			"examples/next",
-			"cli",
-			"bundler-packages/config/src/fixtures",
-			"bundler-packages/cli/fixtures",
-			"**/pkg/**/*.js",
-			"**/pkg/**/*.wasm",
-			"evmone/**",
-			"revm/**"
+		"ignoreUnknown": true,
+		"includes": [
+			"**",
+			"!**/node_modules",
+			"!**/.vscode",
+			"!**/.idea",
+			"!**/.cursor",
+			"!**/dist",
+			"!**/build",
+			"!**/types",
+			"!**/docs",
+			"!**/coverage",
+			"!**/.nx",
+			"!**/.tevm",
+			"!**/tmp",
+			"!**/out-tsc",
+			"!**/cache",
+			"!**/.zig-cache",
+			"!**/zig-out",
+			"!**/forge-artifacts",
+			"!**/broadcast",
+			"!**/output",
+			"!**/target",
+			"!**/*.min.js",
+			"!**/*.min.jsx",
+			"!**/*.min.ts",
+			"!**/*.min.tsx",
+			"!**/*.min.json",
+			"!**/vendor",
+			"!**/generated",
+			"!**/lib",
+			"!**/alloy",
+			"!**/evmone",
+			"!**/revm",
+			"!**/go-ethereum",
+			"!**/ethereumjs-monorepo",
+			"!**/reth",
+			"!**/erigon",
+			"!**/execution-specs",
+			"!**/*.d.ts.map",
+			"!**/*.js.map",
+			"!**/*.cjs.map",
+			"!**/*.mjs.map",
+			"!**/tsconfig.tsbuildinfo",
+			"!**/.turbo",
+			"!**/.next",
+			"!**/.nuxt",
+			"!**/.vercel",
+			"!**/.svelte-kit",
+			"!**/*.wasm",
+			"!**/*.node",
+			"!**/*.dylib",
+			"!**/*.so",
+			"!**/*.dll",
+			"!**/*.lock",
+			"!**/pnpm-lock.yaml",
+			"!**/package-lock.json",
+			"!**/yarn.lock",
+			"!**/bun.lockb",
+			"!**/.git",
+			"!**/.DS_Store",
+			"!**/Thumbs.db",
+			"!**/.env",
+			"!**/.env.*",
+			"!**/lcov.info",
+			"!**/*.log",
+			"!**/debuglogs.txt",
+			"!**/tevm",
+			"!**/fixtures",
+			"!**/tevm.json",
+			"!**/fixtures/*"
 		]
 	},
 	"formatter": {
@@ -97,6 +128,13 @@
 			"quoteStyle": "single",
 			"trailingCommas": "all",
 			"semicolons": "asNeeded"
+		}
+	},
+	"assist": {
+		"actions": {
+			"source": {
+				"organizeImports": "on"
+			}
 		}
 	}
 }
