wip: complete compileFiles implementation, reorganize types and options parsing, wip shadow compilation

--- a/bundler-packages/compiler/package.json
+++ b/bundler-packages/compiler/package.json
@@ -64,6 +64,8 @@
 	},
 	"dependencies": {
 		"@tevm/config": "workspace:^",
+		"@tevm/logger": "workspace:^",
+		"@tevm/utils": "workspace:^",
 		"@tevm/resolutions": "workspace:^",
 		"@tevm/solc": "workspace:^",
 		"@types/node": "^24.6.1",
