--- a/packages/vm/package.json
+++ b/packages/vm/package.json
@@ -55,7 +55,7 @@
 		"lint": "biome check . --write --unsafe",
 		"lint:check": "biome check . --verbose",
 		"lint:deps": "bunx depcheck",
-		"lint:package": "bunx publint --strict && attw --pack",
+		"lint:package": "bunx publint --strict && pnpm pack --pack-destination /tmp && attw /tmp/tevm-vm-*.tgz && rm /tmp/tevm-vm-*.tgz",
 		"package:up": "pnpm up --latest",
 		"test": "bun test --watch",
 		"test:coverage": "bun test --coverage",
